atualização no codigo

--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:network": "vite --host 0.0.0.0",
     "build": "vite build",
     "build:check": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint src --ext ts,tsx"
+    "preview": "vite preview --port 3000 --host 0.0.0.0",
+    "preview:network": "vite preview --host 0.0.0.0",
+    "lint": "eslint src --ext ts,tsx",
+    "predeploy": "npm run build",
+    "deploy:check": "node scripts/pre-deploy-check.js",
+    "deploy:vercel": "vercel --prod",
+    "deploy:railway": "railway up"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
+    "@mui/lab": "^7.0.1-beta.19",
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
     "framer-motion": "^12.23.24",
