--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@mui/lab": "^7.0.1-beta.19",
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "notistack": "^3.0.2",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
