--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "vite",
     "dev:network": "vite --host 0.0.0.0",
+    "dev:backend": "node backend/server.js",
+    "dev:full": "concurrently \"npm run dev\" \"npm run dev:backend\"",
     "build": "vite build",
     "build:check": "tsc && vite build",
     "preview": "vite preview --port 3000 --host 0.0.0.0",
@@ -24,7 +26,11 @@
     "@mui/lab": "^7.0.1-beta.19",
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^4.18.2",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
