--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
-    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^2.0.2",
     "notistack": "^3.0.2",
     "pg": "^8.16.3",
     "react": "^18.2.0",
