--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "multer": "^2.0.2",
     "notistack": "^3.0.2",
     "pg": "^8.16.3",
+    "xlsx": "^0.18.5",
+    "csv-parser": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
