--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
-    "@mui/lab": "^7.0.1-beta.19",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.14.20",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
